2011-11-08  Xavier Perseguers  <xavier@typo3.org>

	* [BUGFIX] #30875: XLIFF to XML conversion fails on install

2011-08-30  Xavier Perseguers  <xavier@typo3.org>

	* [TASK] Add upper bound for TYPO3 version requirement

2011-08-29  Xavier Perseguers  <xavier@typo3.org>

	* [TASK] Use extension dependency to show/skip conversion wizard

2011-08-26  Xavier Perseguers  <xavier@typo3.org>

	* [TASK][DOC] Add documentation
	* [TASK] Raise version to 1.0.0 (stable)
	* [TASK] Add business logic to remember conversion was performed for a given extension
	* [TASK] Import code from http://forge.typo3.org/projects/extension-egovapi/repository/revisions/51393/entry/trunk/class.ext_update.php
	* [TASK] Create extension structure