@@ -47,7 +47,8 @@ class ux_SC_mod_tools_em_index extends SC_mod_tools_em_index {
 	 */
 	public function checkDBupdates($extKey, array $extInfo, $infoOnly = FALSE) {
 		$output = '';
-		$depends = isset($extInfo['EM_CONF']['constraints']['depends']['xliff']);
+		$constraints = isset($extInfo['EM_CONF']) ? $extInfo['EM_CONF']['constraints'] : $extInfo['constraints'];
+		$depends = isset($constraints['depends']['xliff']) || isset($constraints['suggests']['xliff']);
 		if ($infoOnly || !t3lib_extMgm::isLoaded($extKey) || !$depends) {
 			return parent::checkDBupdates($extKey, $extInfo, $infoOnly);
 		}
