@@ -1,5 +1,6 @@
 2011-11-08  Xavier Perseguers  <xavier@typo3.org>
 
+	* [TASK] #31668: Allow to suggest 'xliff' instead of requiring it
 	* [BUGFIX] #30875: XLIFF to XML conversion fails on install
 
 2011-08-30  Xavier Perseguers  <xavier@typo3.org>
